syntax = "proto3";

option csharp_namespace = "JokersJunction.Authentication.Protos";

service Authorizer{
	rpc Register(RegisterRequest) returns (RegisterResponse);
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Disconnect(DisconnectRequest) returns (DisconnectResponse);
}

message RegisterRequest{
	string email = 1;
	string password = 2;
	string confirmPassword = 3;
}

message RegisterResponse {
    bool successful = 1;
    repeated string errors = 2;
}


message LoginRequest{
	string email = 1;
	string password = 2;
	bool rememberMe = 3;
}

message LoginResponse {
    bool successful = 1;
    string error = 2;
    string token = 3;
}

message DisconnectRequest{
	string username = 1;
}

message DisconnectResponse{
	bool successful = 1;
	string error = 2;
}
